--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,12 @@
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
     <script src="{{ url_for('static', filename='langdata.js') }}"></script>
+    <script>
+        // Disble console.debug in prod
+        if (window.location.host === 'hlms-lhovon.pythonanywhere.com') {
+            if(typeof(console)) console.debug = function() {};
+        }
+    </script>
 </head>
 <body>
     <div class="centered">
